update pom for javadoc error
Took 6 minutes